# LeetcodePlanner

./: .env.example  .gitignore  Dockerfile  LICENSE  PLAN.md  README.md  SUPABASE_SETUP.md  alembic.ini  pyproject.toml  render.yaml
.claude/: settings.json
backend/: auth.py  config.py  database.py  main.py  taxonomy.py
backend/agents/: base.py  description_agent.py  feedback_agent.py  glossary_agent.py  mistake_analysis_agent.py  parser_agent.py  pattern_analysis_agent.py  question_classifier_agent.py  question_finder_agent.py  quiz_agent.py  solution_agent.py  subtopic_agent.py  tutor_agent.py
backend/migrations/: env.py
backend/models/: __init__.py  api_config.py  attempt.py  code_mistake.py  glossary.py  pattern_clarification.py  progress.py  question.py  question_links.py  quiz.py  review_quiz.py  solution.py  study_plan.py  subtopic.py  user.py
backend/routers/: attempts.py  code_mistakes.py  glossary.py  import_questions.py  pattern_drill.py  questions.py  quiz.py  review_quiz.py  scheduler.py  settings.py  solutions.py  study_plan.py  subtopics.py
backend/schemas/: api_config.py  attempt.py  code_mistake.py  glossary.py  pattern_drill.py  progress.py  question.py  quiz.py  review_quiz.py  solution.py  study_plan.py  subtopic.py
backend/scripts/: cleanup_non_code_mistakes.py  contextualize_drill_recall_quizzes.py  migrate_sqlite.py
backend/services/: attempt_service.py  code_snippet_filter.py  glossary_service.py  llm_client.py  pattern_analysis_service.py  question_service.py  (+10 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts
(+40 files in other folders)
