[project]
name = "leetcode-planner"
version = "0.1.0"
description = "Duolingo-style LeetCode preparation tool with AI-powered solutions and quizzes"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic-settings>=2.6",
    "openai>=1.60",
    "anthropic>=0.40",
    "cryptography>=44.0",
    "pyjwt>=2.10",
    "httpx>=0.28",
    "python-multipart>=0.0.18",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
